# client

./: .gitignore  .gitignore.bak  .gitmodules  CMakeLists.txt  build.sh  client.sln  client.vcxproj  client.vcxproj.filters
Release/: client.dll.recipe  client.exp  client.ilk  client.vcxproj.FileListAbsolute.txt
Release/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  client.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: api.cpp  api.hpp  console.hpp  drawText.asm  events.cpp  events.hpp  game.cpp  game.hpp  gui.hpp  hooks.cpp  hooks.hpp  main.cpp  memoryEditor.hpp  serverConnection.cpp  serverConnection.hpp  settings.cpp  settings.hpp  socket.cpp  socket.hpp  structs.hpp  tcpSocket.cpp  tcpSocket.h  tcpSocket.hpp  utils.hpp
src/gui/: chat.hpp  console.cpp  console.hpp  fontData.hpp  gui.hpp  imconfig.hpp  memoryEditor.hpp
src/networking/: packetHandler.hpp  serverConnection.cpp  serverConnection.hpp  tcpSocket.cpp
src/utils/: assetManager.cpp  assetManager.hpp  notifications.hpp  settings.cpp  settings.hpp  utils.hpp
x64/Release/client.tlog/: client.lastbuildstate
